--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js --exec babel-node ",
-    "start-dev": "env $(cat .env) nodemon server/index.js --exec babel-node ",
+    "start": "node server/index.js",
+    "start-dev": "env $(cat .env) nodemon server/index.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "keywords": [],
