--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/index.js",
     "start-dev": "env $(cat .env) nodemon server/index.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd server && cd client && npm install --only=dev && npm install && npm run build"
   },
   "keywords": [],
   "author": "Max Shylov",
