--- a/server/client/package.json
+++ b/server/client/package.json
@@ -13,6 +13,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
+    "node-sass": "^4.9.3",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
