--- a/server/client/package.json
+++ b/server/client/package.json
@@ -14,23 +14,24 @@
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.3",
-    "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.1",
     "react-apollo": "^2.1.5",
-    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.0.4",
     "react-sortable-hoc": "^0.8.3",
     "subscriptions-transport-ws": "^0.9.11"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src -o src",
-    "watch-css": "npm run build-css && node-sass-chokidar src -o src --watch --recursive",
-    "start-js": "react-app-rewired start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
