--- a/server/client/package.json
+++ b/server/client/package.json
@@ -10,6 +10,7 @@
     "apollo-link-http": "^1.5.4",
     "apollo-link-ws": "^1.0.8",
     "classnames": "^2.2.6",
+    "dotenv": "^6.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
