--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.14",
+    "nodemailer": "^4.6.8",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react-dom": "^16.5.2",
